Version 1.1, 2016-04-05

  [ Joao Eriberto Mota Filho ], <eriberto@eriberto.pro.br>, 2016-04-05

* Changed the homepage of the project in several files.
* Fix spelling errors in some files.
* Remove duplicate lines in manpage.
* Some adjustments in manpage.
* Updated the FSF address in several files.
* Updated the GPL license text in LICENSE file.
* Updated all copyright notices.

  [ Mats Erik Andersson ], <gnu@gisladisker.se>, 2013-06-27

* Implement RARP support (patch sent to Debian via bug #652510).

  [ Mats Erik Andersson ], <gnu@gisladisker.se>, 2013-06-27

* Fix off-by-one string error in some files.
* Update configure.in.

  [ LaMont Jones ], <lamont@debian.org>, 2007-09-10

* Allow nostrip (patch created in Debian, closing bug #437731).
* Update configure.in to call to pcap-bpf.h instead of net/bpf.h (patch
  created in Debian).

  [ Kumar Appaiah ], <akumar@ee.iitm.ac.in>, 2007-08-26

* Removed references to <net/bpf.h> since now it's sufficient to include
  <pcap.h>, avoiding a fail when building (patch sent to Debian via bug
  #439482).

  [ Deniz Adrian ], <adrian@netzquadrat.de>, 2006-09-06

* Fix a segment fault when using inject-mode with no arguments (patch sent
  to Debian via bug #386150).

  [ Dennis Vshivkov ], <walrus@amur.ru>, 2005-03-10

* Fixed a typo in option parsing code which made -D always random when
  random -S is used. (patch sent to Debian via bug #298799)



-----------------------------------------------------------------------------


1.0 Darren Bounds <dbounds@intrusense.com>
----------------------------------------------
Injection:
    - Bugfix NULL bytes in the payload (patch contributed by: Jason Copenhaver)

General:
    - Updates to several build routines to support libnet 1.1.2+


0.7.1 Darren Bounds <dbounds@intrusense.com>
----------------------------------------------
Injection:
    - Bugfix with sequence and acknowledgement number handling from the command-line
    - Bugfix with random ethernet address generator
